Implement delete slot API
